...
    // String? tokenNotificacao = kIsWeb ? '' : await firebaseMessagingService.getDeviceFirebaseToken();

    if (_emailController.text.isEmpty || _senhaController.text.isEmpty) {
      if (mounted) {
        ScaffoldMessenger.of(context).removeCurrentSnackBar();
        ScaffoldMessenger.of(context).showSnackBar(SnackBar(
          content: const Center(child: Text('Preencha todos os campos.')),
          action: SnackBarAction(
            label: 'OK',
            onPressed: () {},
          ),
        ));
        return;
...
                                  ),
                                ),
                                onPressed: () {
                                  entrarComEmail();
                                },
                                child: const Text(
                                  'Entrar',
                                  style: TextStyle(fontSize: 18),
                                ),
                              ),
                            ),
                            ListTile(
                              onTap: () {
...
